--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mabouteillefront",
+  "name": "KissLulerFront",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,22 +14,18 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "@types/history": "^4.7.9",
     "@types/jest": "^27.4.0",
-    "@types/mapbox-gl": "^2.6.0",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.21",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "bootstrap-avatar": "^1.3.1",
-    "history": "^5.2.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.24.1",
-    "react-map-gl": "^6.1.18",
     "react-redux": "^7.2.6",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
