--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.24.1",
+    "react-images-uploading": "^3.1.7",
     "react-redux": "^7.2.6",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
