--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "typescript": "^4.5.4",
+    "usehooks-ts": "^2.6.0",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
