--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-spinners": "^0.13.4",
     "redux": "^4.1.2",
     "typescript": "^4.5.4",
     "usehooks-ts": "^2.6.0",
