--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-spinners": "^0.13.4",
     "redux": "^4.1.2",
     "typescript": "^4.5.4",
+    "serve": "^14.0.1",
     "usehooks-ts": "^2.6.0",
     "web-vitals": "^2.1.2"
   },
